tests/ascriptions/ill-typed/bad-pair.stella
language core;

extend with #sum-types;
extend with #type-ascriptions;
extend with #pairs;

fn main(n : Nat) -> Nat {
  return {inl(0), 0}.2
}